<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/rl_collect_music_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipe_ly"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/play_bar_height">

            <ListView
                android:id="@+id/lv_collect_music_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@null" />

            <TextView
                android:id="@+id/tv_collect_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/screen_tips_top"
                android:text="@string/no_collect_music"
                android:textColor="@color/grey"
                android:textSize="14sp"
                android:visibility="gone" />
        </android.support.v4.widget.SwipeRefreshLayout>

        <include
            android:id="@+id/ll_loading"
            layout="@layout/include_loading"
            android:visibility="gone" />

        <include
            android:id="@+id/ll_load_fail"
            layout="@layout/include_load_fail"
            android:visibility="gone" />
    </FrameLayout>

    <RelativeLayout
        android:id="@+id/rl_collect_music_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_no_login_tips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="150dp"
            android:gravity="center"
            android:text="@string/not_login_collect"
            android:textColor="@color/grey"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btn_collect_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_no_login_tips"
            android:layout_marginEnd="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/corner_blue_color_5dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </RelativeLayout>
</LinearLayout>
